--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.hibernate.use-new-id-generator-mappings=true
 #2factor.api.key=ba7e19ad-b6c3-11ee-8cbb-0200cd936042
 #2factor.api.key=c2eedd68-c184-11ee-8cbb-0200cd936042
 2factor.api.key=c1b90ac1-c24f-11ee-8cbb-0200cd936042
+#2factor.api.key=53a950d6-fe1d-11ee-8cbb-0200cd936042
 
 
 razorpay.key.id=rzp_test_Lh738g2oARGFbD
