--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=5000
 spring.datasource.url=jdbc:postgresql://localhost:5432/TicketApp
 spring.datasource.username=postgres
 spring.datasource.password=password
