--- a/MuseumTicketing/pom.xml
+++ b/MuseumTicketing/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>razorpay-java</artifactId>
 			<version>1.4.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.24</version>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
 		<dependency>
