--- a/MuseumTicketing/pom.xml
+++ b/MuseumTicketing/pom.xml
@@ -119,6 +119,12 @@
 			<version>2.3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+
+		</dependency>
+
 
 
 	</dependencies>
