--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -1,21 +1,20 @@
-server.port=${PORT}
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#server.port=${PORT}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
+#spring.datasource.username=postgres
+#spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.open-in-view=false
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.hibernate.use-new-id-generator-mappings=true
+#server.port =8081
 
-#2factor.api.key=ba7e19ad-b6c3-11ee-8cbb-0200cd936042
-#2factor.api.key=c2eedd68-c184-11ee-8cbb-0200cd936042
-#2factor.api.key=c1b90ac1-c24f-11ee-8cbb-0200cd936042
-#2factor.api.key=53a950d6-fe1d-11ee-8cbb-0200cd936042
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
+spring.servlet.multipart.enabled=true
+
 2factor.api.key=814d4f26-0cfe-11ef-8cbb-0200cd936042
-
 
 razorpay.key.id=rzp_test_Lh738g2oARGFbD
 razorpay.key.secret=iOSGwx2YAmHsl2dNuzfi1bSa
@@ -28,3 +27,18 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.level.org.hibernate.SQL=DEBUG
+
+# AWS credentials
+
+aws.accessKey=${accessKey}
+aws.secretKey=${secretKey}
+aws.s3.bucketName=${bucketName}
+
+# S3 bucket details
+
+# AWS region
+aws.region=${region}
+
+#aws.accessKey=AKIAZI2LJAK53K24DFGI
+#aws.secretKey=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
+#aws.s3.bucketName=my-new-aks
