--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -28,14 +28,14 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 logging.level.org.hibernate.SQL=DEBUG
 
-# AWS credentials
 
-aws.accessKey=${accessKey}
-aws.secretKey=${secretKey}
-aws.s3.bucketName=${bucketName}
+
+accessKey=${accessKey}
+secretKey=${secretKey}
+bucketName=${bucketName}
 
 # S3 bucket details
 
 # AWS region
-aws.region=${region}
+region=${region}
 
