awsKey-evn-bucketName

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -29,13 +29,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.hibernate.SQL=DEBUG
 
 
-
 accessKey=${accessKey}
 secretKey=${secretKey}
-bucketName=${bucketName}
+aws.s3.bucketName=${bucketName}
 
 # S3 bucket details
 
 # AWS region
-region=${region}
+aws.region=${region}
 
