awsKey-evn-Uppercase

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#server.port=${PORT}
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+server.port=${PORT}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
 #spring.datasource.username=postgres
@@ -29,12 +29,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.hibernate.SQL=DEBUG
 
 
-accessKey=${accessKey}
-secretKey=${secretKey}
-aws.s3.bucketName=${bucketName}
+accessKey=${ACCESSKEY}
+secretKey=${SECRETKEY}
+aws.s3.bucketName=${BUCKETNAME}
 
 # S3 bucket details
 
 # AWS region
-region=${region}
+region=${REGION}
 
