--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -29,12 +29,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.hibernate.SQL=DEBUG
 
 
-accessKey=${ACCESSKEY}
-secretKey=${SECRETKEY}
+aws.accessKey=${ACCESSKEY}
+aws.secretKey=${SECRETKEY}
 aws.s3.bucketName=${BUCKETNAME}
 
 # S3 bucket details
 
 # AWS region
-region=${REGION}
+aws.region=${REGION}
 
