application-properties 04July2024

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-#server.port=${PORT}
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+server.port=${PORT}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
-spring.datasource.username=postgres
-spring.datasource.password=password
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port =8083
+
 
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
@@ -29,18 +27,15 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.hibernate.SQL=DEBUG
 
 
-#aws.accessKey=${ACCESSKEY}
-#aws.secretKey=${SECRETKEY}
-#aws.s3.bucketName=${BUCKETNAME}
-#
-## S3 bucket details
-#
-## AWS region
-#aws.region=${REGION}
+aws.accessKey=${ACCESSKEY}
+aws.secretKey=${SECRETKEY}
+aws.s3.bucketName=${BUCKETNAME}
 
-aws.accessKey=AKIA5FTZEYWYMYXNFK46
-aws.secretKey=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
-aws.s3.bucketName=aksharammuseum
-aws.region=Asia Pacific (Mumbai) ap-south-1
+# S3 bucket details
+
+# AWS region
+aws.region=${REGION}
+
+
 spring.datasource.hikari.auto-commit=false
 
