guide-backgroundImage-09July2024

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-#server.port=${PORT}
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+server.port=${PORT}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -27,23 +27,23 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.org.hibernate.SQL=DEBUG
 
 
-#aws.accessKey=${ACCESSKEY}
-#aws.secretKey=${SECRETKEY}
-#aws.s3.bucketName=${BUCKETNAME}
+aws.accessKey=${ACCESSKEY}
+aws.secretKey=${SECRETKEY}
+aws.s3.bucketName=${BUCKETNAME}
 
 # S3 bucket details
 
 # AWS region
-#aws.region=${REGION}
+aws.region=${REGION}
 
-server.port =8083
-spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
-spring.datasource.username=postgres
-spring.datasource.password=password
-aws.accessKey=AKIA5FTZEYWYMYXNFK46
-aws.secretKey=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
-aws.s3.bucketName=aksharammuseum
-aws.region=Asia Pacific (Mumbai) ap-south-1
+#server.port =8083
+#spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#aws.accessKey=AKIA5FTZEYWYMYXNFK46
+#aws.secretKey=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
+#aws.s3.bucketName=aksharammuseum
+#aws.region=Asia Pacific (Mumbai) ap-south-1
 
 
 
