--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-#server.port=${PORT}
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#
-#aws.accessKey=${ACCESSKEY}
-#aws.secretKey=${SECRETKEY}
-#aws.s3.bucketName=${BUCKETNAME}
-#aws.region=${REGION}
+server.port=${PORT}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+aws.accessKey=${ACCESSKEY}
+aws.secretKey=${SECRETKEY}
+aws.s3.bucketName=${BUCKETNAME}
+aws.region=${REGION}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -41,14 +41,14 @@ logging.level.org.hibernate.SQL=DEBUG
 # AWS region
 
 
-server.port =8083
-spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
-spring.datasource.username=postgres
-spring.datasource.password=password
-aws.accessKey=AKIA5FTZEYWYMYXNFK46
-aws.secretKey=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
-aws.s3.bucketName=aksharammuseum
-aws.region=Asia Pacific (Mumbai) ap-south-1
+#server.port =8083
+#spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#aws.accessKey=AKIA5FTZEYWYMYXNFK46
+#aws.secretKey=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
+#aws.s3.bucketName=aksharammuseum
+#aws.region=Asia Pacific (Mumbai) ap-south-1
 
 
 #aws.accessKey=AKIAZI2LJAK53K24DFGI
