--- a/MuseumTicketing/pom.xml
+++ b/MuseumTicketing/pom.xml
@@ -123,6 +123,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.27.2</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
