--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.servlet.multipart.max-file-size=1024MB
-spring.servlet.multipart.max-request-size=1024MB
+spring.servlet.multipart.max-file-size=7GB
+spring.servlet.multipart.max-request-size=7GB
 spring.servlet.multipart.enabled=true
 
 2factor.api.key=814d4f26-0cfe-11ef-8cbb-0200cd936042      
