MAX-FILE-application-properties-26August2024 -version 1.2

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -7,6 +7,8 @@ aws.accessKey=${ACCESSKEY}
 aws.secretKey=${SECRETKEY}
 aws.s3.bucketName=${BUCKETNAME}
 aws.region=${REGION}
+spring.servlet.multipart.max-file-size=${MAX_FILE}
+spring.servlet.multipart.max-request-size=${REQUEST_SIZE}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -14,8 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.servlet.multipart.max-file-size=7GB
-spring.servlet.multipart.max-request-size=7GB
+
 spring.servlet.multipart.enabled=true
 
 2factor.api.key=814d4f26-0cfe-11ef-8cbb-0200cd936042      
@@ -49,6 +50,8 @@ logging.level.org.hibernate.SQL=DEBUG
 #aws.secretKey=lfejQqG4ILchfhQIs3pozWJHm2GIRbzFMII186Ul
 #aws.s3.bucketName=aksharammuseum
 #aws.region=Asia Pacific (Mumbai) ap-south-1
+#spring.servlet.multipart.max-file-size=7GB
+#spring.servlet.multipart.max-request-size=7GB
 
 
 #aws.accessKey=AKIAZI2LJAK53K24DFGI
