spotBooking-Details-16-October2024

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -52,6 +52,7 @@ logging.level.org.hibernate.SQL=DEBUG
 #aws.region=Asia Pacific (Mumbai) ap-south-1
 #spring.servlet.multipart.max-file-size=7GB
 #spring.servlet.multipart.max-request-size=7GB
+#app.file.upload-dir=C:/path/to/your/project/newVideo
 
 
 #aws.accessKey=AKIAZI2LJAK53K24DFGI
