localServerDetails-without AWS details. 17October2024

--- a/MuseumTicketing/src/main/resources/application.properties
+++ b/MuseumTicketing/src/main/resources/application.properties
@@ -3,10 +3,8 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 
-aws.accessKey=${ACCESSKEY}
-aws.secretKey=${SECRETKEY}
-aws.s3.bucketName=${BUCKETNAME}
-aws.region=${REGION}
+app.file.upload-dir=${UP_DIR}
+
 spring.servlet.multipart.max-file-size=${MAX_FILE}
 spring.servlet.multipart.max-request-size=${REQUEST_SIZE}
 
@@ -14,7 +12,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-app.file.upload-dir=${UP_DIR}
+
+
+##aws.accessKey=${ACCESSKEY}
+##aws.secretKey=${SECRETKEY}
+##aws.s3.bucketName=${BUCKETNAME}
+##aws.region=${REGION}
 
 
 spring.servlet.multipart.enabled=true
@@ -46,12 +49,15 @@ logging.level.org.hibernate.SQL=DEBUG
 #spring.datasource.url=jdbc:postgresql://localhost:5432/guidedb
 #spring.datasource.username=postgres
 #spring.datasource.password=password
+#
+#spring.servlet.multipart.max-file-size=7GB
+#spring.servlet.multipart.max-request-size=7GB
+#app.file.upload-dir=C:/path/to/your/project/newVideo
+
 #aws.accessKey=AKIA5FTZEYWYMYXNFK46
 #aws.secretKey=lfejQqG4ILchfhQIs3pozWJHm2GIRbzFMII186Ul
 #aws.s3.bucketName=aksharammuseum
 #aws.region=Asia Pacific (Mumbai) ap-south-1
-#spring.servlet.multipart.max-file-size=7GB
-#spring.servlet.multipart.max-request-size=7GB
 
 
 #aws.accessKey=AKIAZI2LJAK53K24DFGI
